# compiler

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  test_file.sf
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
cli/: Cargo.toml  main.rs
compiler/: Cargo.toml  environment.rs  evaluator.rs  lib.rs  library.rs
compiler/expressions/: call.rs  hashmap.rs  infix.rs  method.rs  mod.rs  prefix.rs
compiler/objects/: anonymous_function.rs  array.rs  boolean.rs  error.rs  hashmap.rs  mod.rs  null.rs  number.rs  print.rs  return_o.rs  string.rs
compiler/statements/: import.rs  library.rs  mod.rs
core/: Cargo.toml  README.md  compiler.rs  environment.rs  error.rs  lib.rs  main.rs  program.rs  typechecker.rs  utils.rs
core/compiler/: builtins.rs  expressions.rs  objects.rs  statements.rs
core/compiler/builtins/: print.rs  to_string.rs
core/compiler/expressions/: call.rs  for_condition.rs  hashmap.rs  infix.rs  prefix.rs
core/compiler/objects/: anonymous_function.rs  array.rs  boolean.rs  builtin.rs  continue_break.rs  error.rs  for_in.rs  for_of.rs  hashmap.rs  null.rs  number.rs  object.rs  return_o.rs  string_o.rs  undefined.rs
core/compiler/statements/: import.rs
core/environment/: arguments.rs  package.rs  store.rs
core/src/parser/tokens/: keywords.rs  mod.rs  types.rs
core/typechecker/: arguments.rs  expressions.rs  statements.rs  types.rs  utils.rs
core/typechecker/expressions/: anonymous_function.rs  argument.rs  array.rs  call.rs  for_condition.rs  hashmap.rs  infix.rs  prefix.rs  suffix.rs
core/typechecker/statements/: block.rs  for_s.rs  function.rs  if_else.rs  import.rs  interface.rs  variable.rs
examples/: hello_world.sf
examples/classes/: Sflyn.sf  sflyn.sf
examples/for/: array.sf  hashmap.sf  range.sf
examples/functions/: callback.sf  double.sf  less_or_greater.sf  say_hi.sf  test_types.sf
examples/interfaces/: label.sf
examples/modules/: index.sf
examples/variables/: arrays.sf  booleans.sf  const.sf  let.sf  let_types.sf  numbers.sf  strings.sf
parser/: Cargo.toml  README.md  environment.rs  error.rs  expressions.rs  lexer.rs  lib.rs  library.rs  modules.rs  parser.rs  precedence.rs  statements.rs  tokens.rs  types.rs  utils.rs
parser/expressions/: anonymous_function.rs  argument.rs  array.rs  boolean.rs  call.rs  expression.rs  for_condition.rs  hashmap.rs  identifier.rs  infix.rs  method.rs  mod.rs  null.rs  number.rs  parser.rs  prefix.rs  string.rs  suffix.rs  types.rs
parser/lexer/: file.rs  utils.rs
parser/statements/: block.rs  class.rs  class_constructor.rs  class_method.rs  continue_break.rs  export.rs  expression.rs  for_s.rs  function.rs  if_else.rs  import.rs  interface.rs  library.rs  mod.rs  return_s.rs  show.rs  statement.rs  variable.rs  variable_set.rs
parser/tokens/: keywords.rs  mod.rs  signs.rs  token.rs  types.rs
src/: main.rs
src/compiler/: block.rs  call.rs  environment.rs  expression.rs  if_else.rs  infix.rs  integer.rs  mod.rs  prefix.rs  statement.rs  string.rs
std/: Array.sf  Boolean.sf  Log.sf  Null.sf  Number.sf  String.sf  builtins.sf  log.sf  main.sf  range.sf
tests/: Cargo.toml  README.md
tests/src/: main.rs
tests/src/parser/: functions.rs  hashmaps.rs  lexer.rs  mod.rs  tokens.rs  variables.rs
(+48 files in other folders)
