[package]
name = "sflyn"
version = "0.0.1"
license = "MIT"
authors = ["Daniel Solarte <danielsolartech@hotmail.com>"]
homepage = "https://github.com/sflynlang/compiler/README.md"
repository = "https://github.com/sflynlang/compiler"
edition = "2018"
default-run = "sflyn"

[[bin]]
name = "sflyn"
path = "main.rs"

[dependencies]
sflyn_parser = { path = "../parser", version = "0.0.1" }

[package.metadata.winres]
OriginalFilename = "sflyn.exe"
LegalCopyright = "Daniel Solarte"
ProductName = "Sflyn"
FileDescription = "A compiler for Sflyn."