[package]
name = "sflyn"
version = "1.0.0"
license = "MIT"
authors = ["Sflynlang"]
homepage = "https://github.com/sflynlang/compiler/README.md"
repository = "https://github.com/sflynlang/compiler"
edition = "2018"
default-run = "sflyn"

[[bin]]
name = "sflyn"
path = "main.rs"

[dependencies]
sflyn_parser = { path = "../parser", version = "1.0.0" }
sflyn_compiler = { path = "../compiler", version = "1.0.0" }

[package.metadata.winres]
OriginalFilename = "sflyn.exe"
LegalCopyright = "Sflynlang"
ProductName = "Sflyn"
FileDescription = "A compiler for Sflyn."