[package]
name = "sflyn_compiler"
version = "1.0.0"
license = "MIT"
authors = ["Sflynlang"]
homepage = "https://github.com/sflynlang/compiler/README.md"
repository = "https://github.com/sflynlang/compiler"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
sflyn_parser = { path = "../parser", version = "1.0.0" }
