[package]
name = "sflynlang"
version = "1.0.0"
license = "MIT"
authors = ["Sflynlang"]
homepage = "https://github.com/sflynlang/compiler/README.md"
repository = "https://github.com/sflynlang/compiler"
edition = "2018"

[lib]
name = "sflynlang"
path = "lib.rs"

[[bin]]
name = "sflynlang"
path = "main.rs"

[dependencies]
sflyn_parser = { path = "../parser", version = "1.0.0" }
