[package]
name = "sflyn_compiler_tests"
version = "0.0.1"
license = "MIT"
authors = ["Daniel Solarte <danielsolartech@hotmail.com>"]
homepage = "https://github.com/sflynlang/compiler/README.md"
repository = "https://github.com/sflynlang/compiler"
edition = "2018"

[dependencies]
sflyn_compiler = { path = "../core", version = "0.0.2" }
